fix overflow issue in code blocks on Firefox

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -99,7 +99,7 @@ code {
 
 pre {
   padding: 14px;
-  overflow: overlay;
+  overflow: auto;
 }
 
 aside {
